--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Pacifico&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Patua+One&display=swap"
     rel="stylesheet">
   <title>Mark Anthony Pascual</title>
 </head>
 
-<body class="font-ubuntu">
+<body class="font-open">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
